[gd_scene load_steps=21 format=2]

[ext_resource path="res://tiles/ammo/grenade/grenade_throw_4.png" type="Texture" id=1]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_3.png" type="Texture" id=2]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_0.png" type="Texture" id=3]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_7.png" type="Texture" id=4]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_2.png" type="Texture" id=5]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_6.png" type="Texture" id=6]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_5.png" type="Texture" id=7]
[ext_resource path="res://tiles/ammo/grenade/grenade_throw_1.png" type="Texture" id=8]
[ext_resource path="res://tiles/ammo/smoke/smoke_1.png" type="Texture" id=9]
[ext_resource path="res://tiles/ammo/smoke/smoke_3.png" type="Texture" id=10]
[ext_resource path="res://tiles/ammo/smoke/smoke_2.png" type="Texture" id=11]
[ext_resource path="res://tiles/ammo/smoke/smoke_6.png" type="Texture" id=12]
[ext_resource path="res://tiles/ammo/smoke/smoke_0.png" type="Texture" id=13]
[ext_resource path="res://tiles/ammo/smoke/smoke_5.png" type="Texture" id=14]
[ext_resource path="res://tiles/ammo/smoke/smoke_7.png" type="Texture" id=15]
[ext_resource path="res://tiles/ammo/smoke/smoke_4.png" type="Texture" id=16]
[ext_resource path="res://scripts/Grenade.gd" type="Script" id=17]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "smoke_action",
"speed": 4.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": false,
"name": "smoke_disapearing",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 8.06226

[node name="Grenade" type="Node2D"]
script = ExtResource( 17 )

[node name="Animation" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
frame = 7
playing = true

[node name="SmokeArea" type="Area2D" parent="."]
monitoring = false

[node name="SmokeAnimation" type="AnimatedSprite" parent="SmokeArea"]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "smoke_action"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmokeArea"]
shape = SubResource( 3 )

[node name="SmokeCloudTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="SmokeArea" to="." method="_on_SmokeArea_area_entered"]
[connection signal="area_exited" from="SmokeArea" to="." method="_on_SmokeArea_area_exited"]
[connection signal="timeout" from="SmokeCloudTimer" to="." method="_on_SmokeCloudTimer_timeout"]
